--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
 		"exec": "tsx backend/api/index.ts"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^2.2.5",
 		"dayjs": "^1.11.10",
 		"json-server": "^0.17.4",
 		"morgan": "^1.10.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.12.0",
+		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.18.0",
 		"supertest": "^6.3.4",
 		"vitest": "^1.2.0",
