--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@types/morgan": "^1.9.9",
 		"@types/react": "^18.2.15",
 		"@types/react-dom": "^18.2.7",
+		"@types/react-redux": "^7.1.33",
 		"@types/supertest": "^6.0.2",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
